# bakalari-cli

./: .gitignore  pyproject.toml  requirements.txt
bakalari_cli/: __init__.py  auth.py  cli.py
bakalari_cli/commands/: absence.py  marks.py  subjects.py  user.py
